# ShieldAI_Multimodal_Content_Moderation_System

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md
scripts/: benchmark.py  download_models.py
src/shieldai/: __init__.py  __main__.py  config.py  logging_config.py
src/shieldai/api/: __init__.py  app.py  middleware.py  schemas.py
src/shieldai/api/routes/: __init__.py  health.py  moderation.py  results.py
src/shieldai/models/: __init__.py  image_classifier.py  text_classifier.py
src/shieldai/pipeline/: __init__.py  aggregator.py  image_pipeline.py  text_pipeline.py
src/shieldai/queue/: __init__.py  task_queue.py
src/shieldai/storage/: __init__.py  result_store.py
tests/: conftest.py
tests/fixtures/: sample_texts.json
tests/integration/: test_api_health.py  test_api_moderation.py
tests/unit/: test_aggregator.py  test_image_pipeline.py  test_result_store.py  test_schemas.py  test_text_pipeline.py
